Fix gap between anchor link and heading text

--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -24,7 +24,7 @@
     }
 
     &__anchor-link {
-        margin-left: var(--wpdtrt-anchorlinks-margin-anchor-link);
+        margin: var(--wpdtrt-anchorlinks-margin-anchor-link);
     }
 
     &__list {
